# service-tantivy-wrapper

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.sh
.github/workflows/: docker-push-ghcr.yml
src/: main.rs  tokenizer.rs
