[package]
name = "tantivy_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tantivy = { version = "0.22.1", features = ["mmap", "stopwords", "lz4-compression"] }
jieba-rs = "0.9.0"
tracing-subscriber = "0.3"
